added test notice

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,8 @@
 </head>
 
 <body>
+  <div class="msg msg-error">Benvarım.com test sayfasını görüntülemektesiniz. Lütfen karşılaştığınız her hatayı <%=link_to "iletişim formunu", :new_contact_form%> doldurarak bize ulaştırınız. Teşekkürler!
+  </div>
 
   <div id="wrapper">
     <div id="header">
