--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <div id="main-content">
   <div class="widget widget-light">
     <div class="w-inner">
-      <div class="w-title"><%= @user.name %>,  <%=@user.age%></div>
+      <div class="w-title"><%= @user.name %>
+        <% if @user.birthday %>
+          <%=", #{@user.age}"%>
+        <% end %>
+        </div>
           <% if notice %>
             <div class="msg msg-success">
               <%= notice %>
