anasayfa one cikan kurumlar eklendi, tum kurumlar sayfasi duzenlendi, facebook sidebar widget aktiflestirildi.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,62 +51,41 @@
 </div><!-- end of #featured-content -->
 
 
-<%
-=begin
-%>
-<div id="featured-content" class="widget widget-dark clearfix">
-  <div class="w-inner">
-
-    <div class="steps-loading">Yükleniyor...</div>
-
-    <div class="steps clearfix">
-      <div class="step s-first" id="step-1">
-        <div class="s-visual"></div>
-        <div class="s-number">1.</div>
-        <div class="s-content">Desteklemek istediğiniz vakıf yada derneği seçin ve bağış sayfanızı oluşturun.</div>
-      </div>
-
-      <div class="step" id="step-2">
-        <div class="s-visual"></div>
-        <div class="s-number">2.</div>
-        <div class="s-content">Bağış sayfanızı aileniz ve yakın çevreniz ile paylaşın, bağışlar toplansın.</div>
-      </div>
-
-      <div class="step" id="step-3">
-        <div class="s-visual"></div>
-        <div class="s-number">3.</div>
-        <div class="s-content">Topladığınız bağışlar otomatik olarak desteklediğiniz vakıf ya da dernek hesabına aktarılsın.</div>
-      </div>
-    </div> <!-- end of steps -->
-
-    <div class="campaign-form-container">
-      <h1>Bağış kampanyası düzenlemek istiyorum.</h1>
-
-      <form action="#" method="post">
-        <div class="field">
-          <input value="Desteklemek istediğiniz vakıf yada derneği seçiniz..." name="search" class="clear-on-focus" id="featured-input">
-        </div>
-        <input type="submit" value="Başla" name="commit" id="featured-submit" class="button super yellow button-primary no-margin">
-      </form>
-
+<div class="widget widget-light clearfix" id="featured-charities">
+    <div class="w-inner">
+      <div class="w-title">Bağış Yapabileceğiniz Kurumlar</div>
+      <a href="#" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
+      <a href="#" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
+      <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
+      <a href="#" id="fc-iksv" class="opaque" title="IKSV">IKSV</a>
+      <a href="#" id="fc-tegv" class="opaque" title="TEGV">TEGV</a>
+      <div class="more-link"><a href="/kurumlar">Tüm Kurumları Listele &raquo;</a></div>
     </div>
-  </div>
-</div><!-- end of #featured-content -->
+</div>
+
 
 <div id="main-content">
   <div class="widget widget-light">
     <div class="w-inner">
-      <div class="w-title">Aktif Bağış Kampanyaları</div>
-      <ol>
-        <li>kimin eli</li>
-        <li>kimin cebinde</li>2
-      </ol>
+      <div class="w-title">Aktif Projeler</div>
+      main content widget
+    </div>
+  </div>
+
+  <div class="widget widget-light">
+    <div class="w-inner">
+      <div class="w-title">En çok bağış toplayan gönüllüler</div>
       main content widget
     </div>
   </div>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
+
+<%
+=begin
+%>
+
 <%
 =end
 %>
