--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -19,7 +19,7 @@
 
 
           <% if user_signed_in? && current_user == @project.organization.user%>
-          <div class="profile-actions">
+          <div class="admin-actions">
             <ul>
               <li><%= link_to 'Düzenle', edit_project_path(@project) %></li>
               <li><%=link_to "Yeni Proje Ekle", new_project_for_organization_path(@project)%></li>
