kampanya degil sayfa

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
         </div> <!-- end of steps -->
 
         <div class="campaign-form-container">
-          <h2>Bağış kampanyası düzenlemek istiyorum.</h2>
+          <h2>Bağış sayfası düzenlemek istiyorum.</h2>
           <%=render :partial => "layouts/quickstart_widget",
             :locals => {
               :available_organizations => @available_organizations
