--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -41,8 +41,9 @@
         <% end %>
 
 
-
-        <%= raw @project.description %>
+        <div class="fcr-desc truncate-200">
+          <%= raw @project.description %>
+        </div>
       </div>
     </div>
   </div>
