--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,6 +36,7 @@
 <!-- scripts concatenated and minified via ant build script-->
 <%= javascript_include_tag "jquery-ui-1.8.8.min" %>
 <%= javascript_include_tag "jquery.cookie.js" %>
+<%= javascript_include_tag "jquery.truncate.min.js" %>
 
 
 <%= javascript_include_tag "facebox" %>
