--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -33,7 +33,10 @@
             <%=link_to "Web Sitesi", "http://#{@organization.website}", :target => "_blank"%>
           </p>
         <% end %>
-        <%= raw @organization.description_html unless @organization.description_html.nil? %>
+
+        <div class="fcr-desc truncate-200">
+          <%= raw @organization.description_html unless @organization.description_html.nil? %>
+        </div>
       </div>
     </div>
   </div>
