--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -9,13 +9,6 @@
   </div>
   -->
 
-  <div id="w-facebook" class="widget widget-dark">
-    <div class="w-inner">
-      <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FBen-Varim%2F135114429880530&amp;width=260&amp;colorscheme=light&amp;show_faces=true&amp;stream=false&amp;header=true&amp;height=62" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:260px; height:62px;" allowTransparency="true"></iframe>
-    </div>
-  </div>
-
-
   <div id="w-twitter" class="widget widget-dark">
     <div class="w-inner">
 
@@ -53,5 +46,14 @@
 
     </div>
   </div><!-- end of .widget -->
+
+  <div id="w-facebook" class="widget widget-dark">
+    <div class="w-inner">
+      <div style="background: #FFF">
+        <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Ben-Varim/135114429880530" width="260" show_faces="true" stream="false" header="false"></fb:like-box>
+        </div>
+    </div>
+  </div>
+
 
 </div><!-- end of #sidebar -->
