--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -41,7 +41,7 @@
         <% end %>
 
 
-        <div class="fcr-desc truncate-200">
+        <div class="fcr-desc truncate-short">
           <%= raw @project.description %>
         </div>
       </div>
