--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,9 @@
   <div class="widget widget-light" id="w-yeni-kayit">
     <div class="w-inner">
       <div class="w-title">Yeni Kayıt Oluştur</div>
+
+      <%=render :partial => 'layouts/errors'%>
+
       <% if resource.errors.any? %>
         <div id="error_explanation">
           <h2>Kullanıcı yaratılamadı<br/>
@@ -14,6 +17,8 @@
         </div>
         <br/>
       <% end %>
+
+
 
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 
