--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,10 @@
         </div>
       </div><!-- end of .fc-inner -->
       <div class="fc-inner" id="fc-inner-nonprofit">
-        Kurum kayit formu
+        <h2>Yeni Dernek ve Vakıf Kaydı</h2>
+        <p>Siz de çalıştığınız kurumu sosyal medya aracılığıyla daha da güçlendirmek, sesinizi geniş kitlelere ulaştırmak ve daha fazla bağış toplamak istiyorsanız hemen BenVarım.com'a üyelik başvurusu yapın.</p>
+
+         <%=link_to "Yeni Vakıf ve Dernek Kaydı", :new_organization, :class => "button super yellow button-primary no-margin"%>
 
       </div>
     </div>
@@ -60,9 +63,14 @@
       <div class="w-title">Bağış Yapabileceğiniz Kurumlar</div>
       <a href="#" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
       <a href="#" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
-      <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
-      <a href="#" id="fc-iksv" class="opaque" title="IKSV">IKSV</a>
-      <a href="#" id="fc-tegv" class="opaque" title="TEGV">TEGV</a>
+      <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
+      <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
+      <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
+      <!--
+        <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
+        <a href="#" id="fc-iksv" class="opaque" title="IKSV">IKSV</a>
+        <a href="#" id="fc-tegv" class="opaque" title="TEGV">TEGV</a>
+        -->
       <div class="more-link"><a href="/kurumlar">Tüm Kurumları Listele &raquo;</a></div>
     </div>
 </div>
