--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -26,15 +26,16 @@
       </div>
       <div class="fullcontent-right">
 
-        <h1><%= @organization.name %></h1>
-        <h6><%= @organization.address %></h6>
+        <h1 class="org-name"><%= @organization.name %></h1>
+        <p class="org-address"><%= @organization.address %></p>
+
         <% if @organization.website %>
-          <p class="outlink">
-            <%=link_to "Web Sitesi", "http://#{@organization.website}", :target => "_blank"%>
+          <p class="org-url outlink">
+            <%=link_to "http://#{@organization.website}", "http://#{@organization.website}", :target => "_blank"%>
           </p>
         <% end %>
 
-        <div class="fcr-desc truncate-200">
+        <div class="fcr-desc org-desc truncate-short">
           <%= raw @organization.description_html unless @organization.description_html.nil? %>
         </div>
       </div>
