--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -45,7 +45,7 @@
           </div>
         </div><!-- .comment-bubble -->
 
-        <div class="description clearfix">
+        <div class="description clearfix truncate-short">
             <% if @page.logo.file? %>
               <%= image_tag @page.logo.url(:thumb) %>
             <% end %>
