--- a/app/views/home/hakkimizda.html.erb
+++ b/app/views/home/hakkimizda.html.erb
@@ -2,12 +2,16 @@
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Hakkımızda</div>
-       
 
-        <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
- 
+
+      <p>BenVarım platformu 2011 yılında San Francisco ve İstanbul’da yaşayan, dört Türk girişimcisi tarafından kurulmuştur. Kurucular, birer aktivist, gönüllü ve sivil toplum yöneticisi olarak emek verdikleri Türkiye’ye verimli bir internet platformu kazandırmak için bir araya geldiler.</p>
+      <p>BenVarım platformu, Dünya’da nice örneği olan İnternet’ten bağış toplama (online fundraising) sisteminin Türkiye’deki ilk ve tek örneğidir.</p>
+      <p>BenVarım platformu teknolojik altyapı yaratarak, Türkiye’deki tüm sivil toplum kuruluşlarının maddi ve manevi olarak güçlenmesini sağlar.</p>
+      <p>Lütfen bizi Twitter (<a href="http://twitter.com/Ben_Varim" target="_blank">@Ben_Varim</a>) ve <a href="http://www.facebook.com/pages/Ben-Varim/135114429880530" target="_blank">Facebook</a>’ta takip edin.
+      <p>Soru ve önerileriniz için <a href="/iletisim/yeni">iletişim</a> formumuzu kullanabilirsiniz.</p>
+
       </div>
-    </div> 
+    </div>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
