--- a/app/views/layouts/_sidebar_kurum.erb
+++ b/app/views/layouts/_sidebar_kurum.erb
@@ -1,10 +1,10 @@
 <div id="sidebar">
   <div id="w-yenikayit" class="widget widget-blue">
     <div class="w-inner">
-      <div class="w-title">Ben de bağış toplamak istiyorum!</div>
+      <div class="w-title">Ben de gönüllü olmak istiyorum!</div>
       <p>BenVarım üyeleri istedikleri vakıf ve dernek için bağış kampanyası düzenleyebilir ve tamamen güvenli olan sistemimiz aracılığıyla para toplamaya başlayabilirler.</p>
 
-      <%=link_to "Bağış Kampanyası Oluştur", :new_project, :class => "button green large"%>
+      <%=link_to "Bağış Sayfası Yarat", :new_project, :class => "button green large"%>
     </div>
   </div>
 
