--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -89,10 +89,9 @@
           </div><!-- end of .row -->
         <% end %>
 
-
-          <div class="row center">
-            <%=link_to "Ben de bağış kampanyası düzenlemek istiyorum!", new_page_for_organization_path(@organization), :class => "green button super" %>
-          </div><!-- end of .row -->
+        <div class="row row-action">
+          <%=link_to "Ben de bağış kampanyası düzenlemek istiyorum!", new_page_for_organization_path(@organization), :class => "green button large" %>
+        </div><!-- end of .row -->
 
 
         </div>
