nedir sayfasi gorselleri eklendi.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1652,7 +1652,15 @@ body {
  *
 *************************************************************************************/
 
+/*************************************************************************************
+** NEDIR
+*************************************************************************************/
+#page-nedir{
+    background: #2B4B6C url('../images/nedir.png') 20px center no-repeat;
+    height: 250px;
+    padding: 20px 0;
 
+}
 
 
 /*************************************************************************************
