--- a/app/views/home/nedir.html.erb
+++ b/app/views/home/nedir.html.erb
@@ -1,9 +1,15 @@
 
+<div class="widget widget-dark" id="page-nedir">
+  <div class="w-inner">
+  </div>
+</div>
+
+
 <div id="main-content">
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Nedir?</div>
-       
+
 
         <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
 
@@ -20,7 +26,7 @@
         <p>BenVarım’da kullanıcı adınızı yaratın ve proje ile kampanyalarınızı kolayca internet ortamına taşıyın. Gönüllülerinizin sosyal ağlarına kolayca ulaşarak hızlıca bağış toplamaya başlayın.</p>
 
       </div>
-    </div> 
+    </div>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
