--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,41 +19,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>Benvarim</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!--  dynamic metadatas -->
-	
-  <% if defined?(@page) && !@page.nil? %>
-    <meta property="og:title" content="<%= @page.name %>" /> 
-    <meta property="og:type"  content="<%= @page.description %>"/>
-    <% if @page.logo? %>
-      <meta property="og:image" content="<%= url_for @page.logo.url(:medium)%>"/>
-    <% end %>
-    <meta property="og:site_name" content="<%= @page.organization.website %>"/>
-  <% elsif defined?(@project) && !@project.nil? %> 
-    <meta property="og:title" content="<%= @project.name %>" />
-    <meta property="og:type"  content="<%= @project.description %>"/>
-    <% if @project.logo? %>
-      <meta property="og:image" content="<%= url_for @project.logo.url(:medium)%>"/>
-    <% end %>
-    <meta property="og:site_name" content="<%= @project.organization.website %>"/>
-  <% elsif defined?(@organization) && !@organization.nil? %> 
-    <meta property="og:title" content="<%= @organization.name %>" />
-    <meta property="og:type"  content="<%= @organization.description %>"/>
-    <% if @organization.logo? %>
-      <meta property="og:image" content="<%= url_for @organization.logo.url(:medium)%>"/>
-    <% end %>
-    <meta property="og:site_name" content="<%= @organization.website %>"/>
-  <% else %> 
-    <meta property="og:title" content="Benvarim.com" />
-    <meta property="og:type"  content="activity"/>
-    <meta property="og:image" content="<%=  url_for root_path  %>stylesheets/images/logo.gif"/>
-    <meta property="og:site_name" content="Benvarim.com"/>
-  <% end %>
-  
-	
-
+  <meta property="og:site_name" content="Benvarim.com"/>
+  <meta property="og:type"  content="activity"/>
+  <meta property="og:title" content="<%=fb_og_title%>" />
+  <meta property="og:description" content="<%=fb_og_description%>"/>
+  <meta property="og:image" content="<%=fb_og_image%>"/>
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
