iletisim formunun secilme problemi fixes #105

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,7 +65,7 @@
               <%=link_to "Nasıl Çalışır?", :nasil_calisir, :class => "rc-top #{print_if_selected_tab :home, :nasil_calisir}", :id => "nav-nasil"%>
             </li>
             <li>
-              <%=link_to "iletişim", :new_contact_form, :class => "rc-top #{print_if_selected_tab :contact_forms, :new_contact_form}", :id => "nav-iletisim"%>
+              <%=link_to "iletişim", :new_contact_form, :class => "rc-top #{print_if_selected_tab :contact_forms, nil}", :id => "nav-iletisim"%>
             </li>
           </ul>
         </div>
